Closed Bug 597789 Opened 15 years ago Closed 14 years ago

--disable-rdf breaks the build

Categories

(Firefox Build System :: General, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla10

People

(Reporter: mounir, Assigned: matjk7)

Details

(Keywords: dev-doc-complete)

Attachments

(1 file, 1 obsolete file)

On current trunk, we can't build with --disable-rdf
Moving to build-config, we may as well remove that build option.
Component: RDF → Build Config
QA Contact: rdf → build-config
Can we just remove RDF? :) (But yeah, removing the option sounds fine.)
XUL still relies on having localstore.rdf for persisting various things, although I'm starting to kill it off in bug 559505. Makes sense to just remove this --footgun until such time as the platform isn't actually needing it.
Assignee: nobody → matjk7
Status: NEW → ASSIGNED
Flags: in-testsuite-
Keywords: dev-doc-needed
Attached patch patch (obsolete) — Splinter Review
Attachment #571483 - Flags: review?(ted.mielczarek)
Comment on attachment 571483 [details] [diff] [review] patch Review of attachment 571483 [details] [diff] [review]: ----------------------------------------------------------------- ::: toolkit/library/Makefile.in @@ +106,1 @@ > $(NULL) Can you change the indent of all three of these blocks while you're here? (To two-space instead of tab.)
Attachment #571483 - Flags: review?(ted.mielczarek) → review+
Attachment #571483 - Attachment is obsolete: true
Attachment #572680 - Flags: review+
Keywords: checkin-needed
https://hg.mozilla.org/integration/mozilla-inbound/rev/1f0be211721f (Leaving milestone blank for now, since not sure if it will make today's aurora uplift)
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla10
This option was never documented, but its removal is listed on Firefox 10 for developers.
Product: Core → Firefox Build System
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: