Bug 597789 - Remove --disable-rdf; r=ted