xpfe/components/directory/nsDirectoryViewer.h
@@ -43,12 +43,10 @@
 #include "nsNetUtil.h"
 #include "nsIStreamListener.h"
 #include "nsIContentViewer.h"
-#ifdef MOZ_RDF
 #include "nsIHTTPIndex.h"
 #include "nsIRDFService.h"
 #include "nsIRDFDataSource.h"
 #include "nsIRDFLiteral.h"
-#endif
 #include "nsIDocumentLoaderFactory.h"
 #include "nsITimer.h"
 #include "nsISupportsArray.h"
@@ -68,7 +66,6 @@ public:
     NS_DECL_NSIDOCUMENTLOADERFACTORY
 };
 
-#ifdef MOZ_RDF
 class nsHTTPIndex : public nsIHTTPIndex,
                     public nsIRDFDataSource,
                     public nsIStreamListener,
@@ -149,11 +146,9 @@ public:
     NS_DECL_CYCLE_COLLECTING_ISUPPORTS
     NS_DECL_CYCLE_COLLECTION_CLASS_AMBIGUOUS(nsHTTPIndex, nsIHTTPIndex)
 };
-#endif
 
 // {82776710-5690-11d3-BE36-00104BDE6048}
 #define NS_DIRECTORYVIEWERFACTORY_CID \
 { 0x82776710, 0x5690, 0x11d3, { 0xbe, 0x36, 0x0, 0x10, 0x4b, 0xde, 0x60, 0x48 } }
-
 
 #endif // nsdirectoryviewer__h____
